examples/apps/monitoring/kibana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: monitoring
  labels:
    application: kibana
    version: "7.17.11"
    release: "r7"
    stage: development
    component: elasticstack
    part-of: observabillity
  annotations:
      co.elastic.monitor/0.type: tcp
      co.elastic.monitor/0.hosts: ${data.kubernetes.service.name}.${data.kubernetes.namespace}.svc.cluster.local:5601
      co.elastic.monitor/0.schedule: "@every 5s"
      co.elastic.monitor/0.name: kibana-svc
      co.elastic.monitor/0.tags.0: kibana
      co.elastic.monitor/0.tags.1: development
      co.elastic.monitor/0.tags.2: service
      co.elastic.monitor/1.type: http
      co.elastic.monitor/1.hosts: ${data.kubernetes.service.name}.${data.kubernetes.namespace}.svc.cluster.local:5601/status
      co.elastic.monitor/1.schedule: "@every 5s"
      co.elastic.monitor/1.name: kibana-svc
      co.elastic.monitor/1.tags.0: kibana
      co.elastic.monitor/1.tags.1: development
      co.elastic.monitor/1.tags.2: service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 5601
      targetPort: 5601
  selector:
    application: kibana
